# ferrite

./: .gitignore  AGENT_RULES_v2.md  Cargo.toml  DEPLOYMENT.md  HANDOFF-PLAYER-HARDENING.md  PERFORMANCE.md  README.md  ROADMAP.md
.github/workflows/: auth-hotpath-gate.yml  ci.yml  perf-gate.yml  release.yml
config/: ferrite.toml
crates/ferrite-api/: Cargo.toml
crates/ferrite-api/src/: auth.rs  error.rs  lib.rs  metrics.rs  router.rs  state.rs  webhooks.rs
crates/ferrite-api/src/handlers/: collection.rs  image.rs  library.rs  media.rs  mod.rs  progress.rs  stream.rs  subtitle.rs  system.rs  thumbnail.rs  tv.rs  user.rs  webhook.rs
crates/ferrite-core/: Cargo.toml
crates/ferrite-core/src/: config.rs  error.rs  lib.rs  media.rs
crates/ferrite-db/: Cargo.toml
crates/ferrite-db/src/: chapter_repo.rs  collection_repo.rs  keyframe_repo.rs  lib.rs  library_repo.rs  media_repo.rs  movie_repo.rs  preference_repo.rs  progress_repo.rs  stream_repo.rs  subtitle_repo.rs  tv_repo.rs  user_repo.rs  webhook_repo.rs
crates/ferrite-db/tests/: media_search_fts.rs  playback_progress_user_isolation.rs
crates/ferrite-dlna/: Cargo.toml
crates/ferrite-dlna/src/: content_directory.rs  description.rs  lib.rs  routes.rs  ssdp.rs
crates/ferrite-metadata/: Cargo.toml
crates/ferrite-metadata/src/: enrichment.rs  image_cache.rs  lib.rs  provider.rs  tmdb.rs
crates/ferrite-scanner/: Cargo.toml
crates/ferrite-scanner/src/: extract.rs  filename.rs  lib.rs  probe.rs  progress.rs  subtitle.rs  walker.rs  watcher.rs
crates/ferrite-scanner/tests/: incremental_scan.rs
crates/ferrite-server/: Cargo.toml
crates/ferrite-server/src/: main.rs
crates/ferrite-stream/: Cargo.toml
crates/ferrite-stream/src/: compat.rs  direct.rs  hls.rs  lib.rs  transcode.rs
crates/ferrite-stream/tests/: hls_session_integration.rs
crates/ferrite-transcode/: Cargo.toml
crates/ferrite-transcode/src/: audio.rs  hwaccel.rs  lib.rs  thumbnails.rs  tonemap.rs  variants.rs
docs/: WHATBOX_TESTING.md  performance-optimization-plan.md  self-update-implementation-plan.md  streaming-speed-improvements.md  temp-codebase-review-2026-02-20.md  temp-implementation-plan-2026-02-20.md  temp-logs.md
docs/benchmarks/: README.md  auth-hotpath-baseline-template.json  auth-hotpath-thresholds.json  dashboard-query-template.md  perf-thresholds.json  playback-baseline-template.json  weekly-snapshot-template.md
docs/logs/: temp-logs.md
ferrite-ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
ferrite-ui/src/: App.tsx  api.ts  index.css  utils.ts
ferrite-ui/src/components/: AddLibraryDialog.tsx  ContinueWatching.tsx  DetailView.tsx  Header.tsx  LibraryChips.tsx  Login.tsx  MediaCard.tsx  MediaGrid.tsx  PerfOverlay.tsx  Player.tsx  StatusBar.tsx  Toolbar.tsx
ferrite-ui/src/layout/: AppShell.tsx  Sidebar.tsx  TopBar.tsx
ferrite-ui/src/lib/: perf.ts
ferrite-ui/src/pages/: AdminPage.tsx  HomePage.tsx  LibraryPage.tsx  LoginPage.tsx  MediaDetailPage.tsx  PlayerPage.tsx  SearchPage.tsx  SettingsPage.tsx  ShowDetailPage.tsx  ShowsPage.tsx
ferrite-ui/src/stores/: auth.ts  media.ts
migrations/: 001_initial_schema.sql  002_media_streams.sql  003_external_subtitles.sql  004_tv_shows.sql  005_users.sql  006_collections.sql  007_webhooks.sql  008_stream_color_metadata.sql  009_chapters.sql  010_user_preferences.sql  011_playback_progress_index.sql  012_tv_show_normalized_title.sql  013_fts5_search.sql  014_performance_indexes.sql  015_media_keyframes.sql  016_playback_progress_user_scope.sql  017_fts5_sync_triggers.sql
scripts/: auth-hotpath-load.mjs  check-auth-hotpath-thresholds.mjs  check-playback-thresholds.mjs  ferrite-run.sh  install-whatbox.sh  playback-benchmark.mjs
test_extract/static/: index.html
test_extract/static/assets/: index-Bk1fxzdK.css  index-C0YcGI0y.js
tests/integration/: README.md  run-playback-critical.mjs
tests/subs_test/: playlist.m3u8  playlist_copyts.m3u8  playlist_enc.m3u8  playlist_enc2.m3u8  playlist_mkv.m3u8  playlist_mkv_copy.m3u8  playlist_real_mkv.m3u8  playlist_real_mp4.m3u8  real_test.mkv  seg_000.ts  seg_001.ts  seg_copyts_000.m4s  seg_enc_000.m4s  seg_enc_001.m4s  seg_mkv_001.m4s  seg_mkv_copy_000.m4s  seg_mkv_copy_001.m4s  seg_mkv_copy_002.m4s  seg_real_mkv_000.m4s  seg_real_mp4_001.m4s  test_av.mkv
