[workspace]
resolver = "2"
members = [
    "crates/ferrite-server",
    "crates/ferrite-core",
    "crates/ferrite-db",
    "crates/ferrite-scanner",
    "crates/ferrite-metadata",
    "crates/ferrite-stream",
    "crates/ferrite-transcode",
    "crates/ferrite-dlna",
    "crates/ferrite-api",
]

[workspace.package]
version = "0.1.36"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ryan-stephens/ferrite"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }

# HTTP client — use rustls for musl/cross-compile compatibility (no OpenSSL dependency)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
regex = "1"
strsim = "0.11"
dashmap = "6"
notify = "7"
mime_guess = "2"
percent-encoding = "2"
quick-xml = "0.37"
governor = "0.8"
jsonwebtoken = "9"
bcrypt = "0.17"
socket2 = { version = "0.5", features = ["all"] }
tokio-util = { version = "0.7", features = ["io"] }
async-trait = "0.1"
futures = "0.3"
subtle = "2"

# Workspace crates
ferrite-core = { path = "crates/ferrite-core" }
ferrite-db = { path = "crates/ferrite-db" }
ferrite-scanner = { path = "crates/ferrite-scanner" }
ferrite-metadata = { path = "crates/ferrite-metadata" }
ferrite-stream = { path = "crates/ferrite-stream" }
ferrite-transcode = { path = "crates/ferrite-transcode" }
ferrite-dlna = { path = "crates/ferrite-dlna" }
ferrite-api = { path = "crates/ferrite-api" }
