[package]
name = "ferrite-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ferrite-core = { workspace = true }
ferrite-db = { workspace = true }
ferrite-scanner = { workspace = true }
ferrite-stream = { workspace = true }
ferrite-transcode = { workspace = true }
ferrite-metadata = { workspace = true }
sqlx = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
jsonwebtoken = { workspace = true }
bcrypt = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
percent-encoding = { workspace = true }
tokio-util = { workspace = true }
subtle = { workspace = true }
governor = { workspace = true }
dashmap = { workspace = true }
sha2 = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
futures = { workspace = true }
