[package]
name = "ferrite-metadata"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ferrite-core = { workspace = true }
ferrite-db = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
strsim = { workspace = true }
governor = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
sqlx = { workspace = true }
