[package]
name = "ferrite-scanner"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ferrite-core = { workspace = true }
ferrite-db = { workspace = true }
ferrite-metadata = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
notify = { workspace = true }
regex = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
dashmap = { workspace = true }
