[package]
name = "ferrite-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ferrite"
path = "src/main.rs"

[dependencies]
ferrite-core = { workspace = true }
ferrite-db = { workspace = true }
ferrite-scanner = { workspace = true }
ferrite-stream = { workspace = true }
ferrite-transcode = { workspace = true }
ferrite-api = { workspace = true }
ferrite-dlna = { workspace = true }
uuid = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
bcrypt = { workspace = true }
