[package]
name = "ferrite-transcode"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ferrite-core = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
